# project_z

./: .gitignore  CMakeLists.txt
doc/kernel/: diag.xmi  notes.txt
doc/kernel/memory/: classes.plantuml  sequences.plantuml
include/: address_space.h  process.h  routine.h  task.h
lib/: CMakeLists.txt
spike/: memory_region_concept.plantuml  register.cc
spike/qemu_rpi3/: build.sh  gdb.sh  print_run.sh  run.sh  run_image.sh  startup.s  stop.sh  test.c  test.ld
spike/utility/: exceptions.s  register.cc  register.h
src/: CMakeLists.txt
src/arch/: arch_types_gen.in
src/arch/arm64/: CMakeLists.txt  arch_start.S  arch_start.s  context.h  exceptions.S  exceptions.cc  exceptions.h  exceptions.s  mutex.cc  mutex.h  sysregs.h  system.h  tcr.h  timer.cc  timer.h
src/arch/arm64/cmake/: compiler.cmake
src/arch/arm64/mm/: address_space.cc  address_space.h  mmu.cc  mmu.h  tcr.h  translation_descriptor.h  translation_tabel.cc  translation_tabel.h  translation_table.cc  translation_table.h
src/kernel/: CMakeLists.txt  config.h  kernel.cc  kernel.h  kernel.ld  logger.cc  logger.h  types.h
src/kernel/hal/: mutex.h  mutex_base.h
src/kernel/mm/: address_space.h  allocator.h  boot_allocator.cc  boot_allocator.h  boot_stack.cc  boot_stack.h  memory.cc  memory.h  page_pool.cc  page_pool.h  page_registry.cc  page_registry.h  physical_allocator.h  pool.h  region.h  shared_ptr.h  unique_ptr.h
src/kernel/scheduler/: process.cc  process.h  routine.cc  routine.h  routine_static_wrapper.h  scheduler.h
src/kernel/utils/: array.h  enum_iterator.h  register.h  static_wrapper.h  variant.h
test/: CMakeLists.txt
test/kernel/mm/: CMakeLists.txt  pool_test.cc
test/kernel/scheduler/: CMakeLists.txt  routine_static_wrapper_test.cc
test/kernel/utils/: CMakeLists.txt  register_test.cc  variant_test.cc
